--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -579,3 +579,8 @@ footer .owner p a {
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+#cpan_distributions,
+#cpan_distributions th {
+	font-size: 13px;
+}
