--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -580,7 +580,7 @@ footer .owner p a {
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
-#cpan_distributions,
-#cpan_distributions th {
+#main table,
+#main table th {
 	font-size: 13px;
 }
