--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -468,3 +468,10 @@ footer .owner p a {
 #main table .coveralls_badge {
 	width: 100px;
 }
+#ohloh_link {
+	margin-top: 3px;
+	border-width: 2px 3px 3px 3px;
+	border-style: solid;
+	border-color: white;
+	background-color: white;
+}
