--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -124,7 +124,7 @@ p.tagline {
 	padding-top: 3px;
 }
 .download-bar .inner ul li#badge_ohloh a img {
-	border-width: 2px 3px;
+	border-width: 2px 4px 3px 4px;
 	border-style: solid;
 	border-color: white;
 	background-color: white;
