Fix margin of footer links.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -170,6 +170,8 @@ Full-Width Styles
 
 #footer_wrap .inner ul {
 	list-style-type: none;
+	margin: 0px;
+	overflow: auto;
 }
 #footer_wrap .inner ul li {
 	float: left;
