--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -82,6 +82,7 @@ Tables of Projects
 
 #main_content_wrap table {
 	width: 100%;
+	background-color: #f2f2f2;
 }
 #main_content_wrap table .version {
 	width: 90px;
@@ -161,7 +162,7 @@ Full-Width Styles
 }
 
 #main_content_wrap {
-	background: #f2f2f2;
+	background: #fff;
 	border-top: 1px solid #111;
 	border-bottom: 1px solid #111;
 }
