Link to GitHub profile.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 		<!-- HEADER -->
 		<div id="header_wrap" class="outer">
 			<header class="inner">
-				<a id="forkme_banner" href="https://github.com/guillaumeaubert/guillaumeaubert.github.io">View on GitHub</a>
+				<a id="github_banner" href="https://github.com/guillaumeaubert/">Guillaume on GitHub</a>
 
 				<h1 id="project_title">{{ page.title }}</h1>
 				<h2 id="project_tagline">{{ page.tagline }}</h2>
