Update <title> to use title+tagline.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 				<link rel="stylesheet" type="text/css" media="screen" href="{{ css_include }}">
 			{% endfor %}
 		{% endif %}
-		<title>A dashboard for Guillaume Aubert's open source projects</title>
+		<title>{{ page.title }} - {{ page.tagline }}</title>
 	</head>
 
 	<body>
