--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 				<link rel="stylesheet" type="text/css" media="screen" href="{{ css_include }}">
 			{% endfor %}
 		{% endif %}
-		<title>{{ page.title }} - {{ page.tagline }}</title>
+		<title>Guillaume Aubert - {{ page.title }}</title>
 	</head>
 
 	<body>
@@ -19,14 +19,14 @@
 			<header class="inner">
 				<a id="github_banner" href="https://github.com/guillaumeaubert/">Guillaume on GitHub</a>
 
-				<h1 id="project_title">{{ page.title }}</h1>
-				<h2 id="project_tagline">{{ page.tagline }}</h2>
+				<h1 id="project_title">Guillaume Aubert</h1>
 			</header>
 		</div>
 
 		<!-- MAIN CONTENT -->
 		<div id="main_content_wrap" class="outer">
 			<section id="main_content" class="inner">
+				<h1>{{ page.title }}</h1>
 				{{ content }}
 			</section>
 		</div>
