Add menu items.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,10 @@
 				<a id="github_banner" href="https://github.com/guillaumeaubert/">Guillaume on GitHub</a>
 
 				<h1 id="project_title">Guillaume Aubert</h1>
+				<section id="menu">
+					<a href="/index.html">&#9700; Projects Dashboard</a>
+					<a href="/git_contributions_statistics.html">&#9700; Git Contribution Statistics</a>
+				</section>
 			</header>
 		</div>
 
