--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -38,6 +38,9 @@ h1 {
 	font-size: 36px;
 	font-weight: 700;
 }
+#main_content h1 {
+	text-align: center;
+}
 
 h2 {
 	padding-bottom: 10px;
@@ -161,6 +164,15 @@ Full-Width Styles
 	text-shadow: #111 0px 0px 10px;
 }
 
+#menu a {
+	color: #0090ff;
+	font-size: 18px;
+	font-weight: 300;
+	background: none;
+	clear: none;
+	margin: 0px 30px 0px 0px;
+}
+
 #main_content_wrap {
 	background: #fff;
 	border-top: 1px solid #111;
@@ -168,7 +180,7 @@ Full-Width Styles
 }
 
 #main_content {
-	padding-top: 40px;
+	padding-top: 20px;
 }
 
 .distribution .cpan-testers-pass {
