--- a/css/git_contributions_statistics.css
+++ b/css/git_contributions_statistics.css
@@ -1,3 +1,12 @@
+/***** General for the entire page *****/
+
+#main_content h3 {
+	margin: 25px 0px 10px 0px;
+}
+
+
+/***** Commits by day *****/
+
 #commits_by_day {
 	font-size: 9pt;
 	font-family: Consolas, courier;
@@ -16,6 +25,9 @@
 #commits_by_day .RdYlGn .q1-11{ fill: #8cc665; }
 #commits_by_day .RdYlGn .q2-11{ fill: #44a340; }
 #commits_by_day .RdYlGn .q3-11{ fill: #1e6823; }
+
+
+/***** Commits by weekday hour *****/
 
 #commits_by_weekday_hour rect.bordered {
 	stroke: #E6E6E6;
