Move Chart.js to and archive page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 				<section id="menu">
 					<a href="/index.html">&#9700; Projects Dashboard</a>
 					<a href="/git_contributions_statistics.html">&#9700; Git Contribution Statistics</a>
+					<a href="/archive.html">&#9700; Archive</a>
 				</section>
 			</header>
 		</div>
