--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -9,6 +9,11 @@ section h3 {
 	background-color: transparent;
 }
 
+section#go_packages h3 {
+	background-image: url('/images/golang.png');
+	background-position: 0px 0px;
+}
+
 section#ruby_gems h3 {
 	background-image: url('/images/ruby.png');
 }
