Clean up extra semicolon.

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -60,7 +60,7 @@ table.list .github_open_issues {
 }
 
 table.list .travis_status_badge {
-	width: 100px;;
+	width: 100px;
 }
 
 table.list .coveralls_badge {
