Upgrade syntax for newer Jekyll version.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 
 				<h1 id="project_title">Guillaume Aubert</h1>
 				<section id="menu">
-					<a {% if page.url == '/' || page.url == '/index.html' %}class="active"{% endif %} href="/index.html">
+					<a {% if page.url == '/' or page.url == '/index.html' %}class="active"{% endif %} href="/index.html">
 						<span class="bullet">&#9700;</span>
 						Projects Dashboard
 					</a>
