Add contact methods.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,12 @@
 		<!-- HEADER -->
 		<div id="header_wrap" class="outer">
 			<header class="inner">
-				<a id="github_banner" href="https://github.com/guillaumeaubert/">Guillaume on GitHub</a>
+				<div id="banner">
+					Find me on:
+					<a href="https://github.com/guillaumeaubert/">GitHub</a>,
+					<a href="https://www.linkedin.com/in/aubertguillaume">LinkedIn</a>,
+					<a href="mailto:aubertg@cpan.org">Email</a>
+				</div>
 
 				<h1 id="project_title">Guillaume Aubert</h1>
 				<section id="menu">
