--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -99,19 +99,23 @@ Full-Width Styles
 	margin-left: 4px;
 }
 
-#github_banner {
+#banner {
 	display: block;
 	position: absolute;
 	top:0;
 	right: 10px;
 	z-index: 10;
-	padding: 10px 50px 10px 10px;
-	color: #fff;
-	background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
-	font-weight: 700;
+	padding: 10px;
 	box-shadow: 0 0 10px rgba(0,0,0,.5);
 	border-bottom-left-radius: 2px;
 	border-bottom-right-radius: 2px;
+	background-color: #0090ff;
+}
+
+#banner,
+#banner a {
+	color: #fff;
+	font-weight: 700;
 }
 
 #header_wrap {
