Use icons for links to find me online.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,26 @@
 		<div id="header_wrap" class="outer">
 			<header class="inner">
 				<div id="banner">
-					Find me on:
-					<a href="https://github.com/guillaumeaubert/">GitHub</a>,
-					<a href="https://www.linkedin.com/in/aubertguillaume">LinkedIn</a>,
-					<a href="mailto:aubertg@cpan.org">Email</a>
+					<ul>
+						<li>
+							Find me on:
+						</li>
+						<li>
+							<a href="https://github.com/guillaumeaubert/">
+								<img src="/images/font-awesome_4-6-3_github_32_0_ffffff_none.png" alt="Github"/>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/aubertguillaume">
+								<img src="/images/brandico_2014-04-07_linkedin-rect_32_0_ffffff_none.png" alt="LinkedIn"/>
+							</a>
+						</li>
+						<li>
+							<a href="mailto:aubertg@cpan.org">
+								<img src="/images/font-awesome_4-6-3_envelope-square_32_0_ffffff_none.png" alt="Email"/>
+							</a>
+						</li>
+					</ul>
 				</div>
 
 				<h1 id="project_title">Guillaume Aubert</h1>
