--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -18,7 +18,7 @@ Theme Styles
 
 body {
 	color:#373737;
-	background: #212121;
+	background: #fff;
 	font-size: 14px;
 	font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
