--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 		<meta charset='utf-8' />
 		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 		<meta name="description" content="A dashboard for Guillaume Aubert's open source projects" />
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 		<link rel="stylesheet" type="text/css" media="screen" href="/css/stylesheet.css?v={{ site.github.build_revision }}">
 		{% if page.css_includes %}
 			{% for css_include in page.css_includes %}
