Upgrade to JQuery v3.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
 		</div>
 
 		<!-- Load JS files -->
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		{% if page.js_includes %}
 			{% for js_include in page.js_includes %}
 				<script type="text/javascript" src="{{ js_include }}"></script>
