--- a/css/git_contributions_statistics.css
+++ b/css/git_contributions_statistics.css
@@ -14,7 +14,12 @@
 	color: #222222;
 	margin: 15px 0px 0px 0px;
 }
-
+#main_content #metadata {
+	display: none;
+	text-align: center;
+	margin-top: -15px;
+	margin-bottom: 15px;
+}
 
 /***** Commits by language *****/
 
