Clarify menu item.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 				<section id="menu">
 					<a {% if page.url == '/' or page.url == '/index.html' %}class="active"{% endif %} href="/index.html">
 						<span class="bullet">&#9700;</span>
-						Projects Dashboard
+						My Projects
 					</a>
 					<a {% if page.url == '/git_contributions_statistics.html' %}class="active"{% endif %} href="/git_contributions_statistics.html">
 						<span class="bullet">&#9700;</span>
