Display project status.
This is more helpful than the date of the last commit, which is still available
as a tooltip over that cell.

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -56,7 +56,7 @@ Small Device Styles
 }
 
 @media screen and (max-width: 670px) {
-	table.list .last-commit,
+	table.list .status,
 	table.list .badges {
 		display: none;
 	}
