--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,11 @@
 		</div>
 
 		<!-- Load JS files -->
-		<script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+		<script
+		  src="http://code.jquery.com/jquery-3.3.1.min.js"
+		  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+		  crossorigin="anonymous"
+		></script>
 		{% if page.js_includes %}
 			{% for js_include in page.js_includes %}
 				<script type="text/javascript" src="{{ js_include }}"></script>
