--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
 
 		<!-- Load JS files -->
 		<script
-		  src="http://code.jquery.com/jquery-3.3.1.min.js"
+		  src="//code.jquery.com/jquery-3.3.1.min.js"
 		  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 		  crossorigin="anonymous"
 		></script>
